tests/tests/snapshots/test__typescript__ts-export-both.snap
---
source: tests/tests/typescript.rs
expression: "Typescript::default().with_serde(mode).bigint(BigIntExportBehavior::Number).export(&types().0).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.

export type A = {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
};

export type AGenericStruct<T> = {
	field: Demo<T, boolean>,
};

export type ActualType = {
	a: GenericType<string>,
};

export type AdjacentlyTagged = { t: "A" } | { t: "B"; c: {
	id: string,
	method: string,
} } | { t: "C"; c: string };

export type AdjacentlyTaggedWithAlias = { type: "A"; data: {
	field: string,
} } | { type: "B"; data: {
	other: number,
} };

export type B = {
	b: number,
};

export type BasicEnum = "A" | "B";

export type BoxFlattened = {
	b: BoxedInner,
};

export type BoxInline = {
	c: {
		a: number,
	},
};

export type BoxedInner = {
	a: number,
};

export type BracedStruct = string;

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedEnum = 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
{ A: number } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
{ B: { 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
a: number } };

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedStruct = {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
};

export type Container1 = {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
};

export type D = {
	flattened: number,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type DeprecatedEnumVariants = 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C";

export type DeprecatedFields = {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
};

export type DeprecatedTupleVariant = [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number];

/**
 * @deprecated
 */
export type DeprecatedType = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = {
	a: number,
};

export type DoubleFlattened = {
	a: ToBeFlattened,
	b: ToBeFlattened,
};

export type Eight = { A: string } | "B";

export type EmptyBracedStruct = Record<string, never>;

export type EmptyEnum = never;

export type EmptyEnumTagged = never;

export type EmptyEnumTaggedWContent = never;

export type EmptyEnumUntagged = never;

export type EmptyStruct = Record<string, never>;

export type EmptyStructWithTag = {
	a: "EmptyStructWithTag",
};

export type EmptyTupleStruct = [];

export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; bbbbbb: number } };

export type EnumReferenceRecordKey = {
	a: Partial<{ [key in BasicEnum]: number }>,
};

export type EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

export type EnumWithMultipleVariantAliases = "Variant" | "Other";

export type EnumWithVariantAlias = "Variant" | "Other";

export type EnumWithVariantAliasAndRename = "renamed_variant" | "Other";

export type ExternallyTagged = "A" | { B: { id: string; method: string } } | { C: string };

export type ExtraBracketsInTupleVariant = { A: string };

export type ExtraBracketsInUnnamedStruct = string;

export type First = {
	a: string,
};

export type FlattenA = {
	a: number,
	b: number,
};

export type FlattenB = (FlattenA) & {
	c: number,
};

export type FlattenC = (FlattenA) & {
	c: number,
};

export type FlattenD = {
	a: FlattenA,
	c: number,
};

export type FlattenE = {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
};

export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

export type FlattenEnumStruct = (FlattenEnum) & {
	outer: string,
};

export type FlattenF = {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
};

export type FlattenG = {
	b: FlattenB,
	d: number,
};

export type FlattenOnNestedEnum = (NestedEnum) & {
	id: string,
};

export type FlattenedInner = {
	c: Inner,
};

export type Fourth = {
	a: First,
	b: {
		a: string,
	},
};

export type Generic1<T> = {
	value: T,
	values: T[],
};

export type Generic2<A, B, C> = { A: A } | { B: [B, B, B] } | { C: C[] } | { D: A[][][] } | { E: { a: A; b: B; c: C } } | { X: number[] } | { Y: number } | { Z: number[][] };

export type GenericAutoBound<T> = {
	value: T,
	values: T[],
};

export type GenericAutoBound2<T> = {
	value: T,
	values: T[],
};

export type GenericFlattened<T> = {
	generic_flattened: T,
};

export type GenericNewType1<T> = T[][];

export type GenericParameterOrderPreserved = {
	pair: Pair<number, string>,
};

export type GenericStruct<T> = {
	arg: T,
};

export type GenericStruct2<T> = {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: T[][],
	h: ([([T, T]), ([T, T]), ([T, T])])[],
};

export type GenericTuple<T> = [T, T[], T[][]];

export type GenericTupleStruct<T> = T;

export type GenericType<T> = null | T;

export type HasGenericAlias = { [key in number]: string };

export type InlineEnumField = { A: {
	a: string,
} };

export type InlineFlattenGenerics = (InlineFlattenGenericsG<string>) & {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
};

export type InlineFlattenGenericsG<T> = {
	t: T,
};

export type InlineOptionalType = {
	optional_field: {
		a: string,
	} | null,
};

export type InlineStruct = {
	ref_struct: SimpleStruct,
	val: number,
};

export type InlineTuple = {
	demo: [string, boolean],
};

export type InlineTuple2 = {
	demo: [{
		demo: [string, boolean],
	}, boolean],
};

export type InlinerStruct = {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
};

export type Inner = {
	a: number,
	b: FlattenedInner,
};

export type InternallyTaggedB = { type: "A" };

export type InternallyTaggedC = { type: "A" };

export type InternallyTaggedD = { type: "A" };

export type InternallyTaggedE = { type: "A" };

export type InternallyTaggedF = { type: "A" };

export type InternallyTaggedFInner = null;

export type InternallyTaggedG = { type: "A" };

export type InternallyTaggedGInner = string;

export type InternallyTaggedH = { type: "A" };

export type InternallyTaggedHInner = null;

export type InternallyTaggedI = { type: "A" };

export type InternallyTaggedIInner = string;

export type InternallyTaggedL = { type: "A" };

export type InternallyTaggedLInner = { type: "A" } | { type: "B" };

export type InternallyTaggedM = { type: "A" };

export type InternallyTaggedMInner = null;

export type InternallyTaggedWithAlias = { type: "A"; field: string } | { type: "B"; other: number };

export type InvalidToValidType = {
	cause: null | null,
};

export type Issue281 = {
	default_unity_arguments: string[],
};

/**
 *  https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = {
	foo?: boolean,
	bar?: boolean,
};

export type KebabCase = {
	"test-ing": string,
};

export type LoadProjectEvent = { event: "started"; data: {
	projectName: string,
} } | { event: "progressTest"; data: {
	projectName: string,
	status: string,
	progress: number,
} } | { event: "finished"; data: {
	projectName: string,
} };

export type MacroEnum = { Demo: string } | { Demo2: { demo2: string } };

export type MacroStruct = string;

export type MacroStruct2 = {
	demo: string,
};

export type MyEmptyInput = Record<string, never>;

export type MyEnum = { A: string } | { B: number };

export type MyEnumAdjacent = { t: "Variant"; c: (First) };

export type MyEnumExternal = { Variant: (First) };

export type MyEnumTagged = (First) & { type: "Variant" };

export type MyEnumUntagged = (First);

export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

export type NonOptional = string | null;

export type Optional = {
	a: number | null,
	b?: number | null,
	c?: string | null,
	d?: boolean,
};

export type OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };

export type OptionalOnNamedField = string | null;

export type OptionalOnTransparentNamedField = {
	b: string | null,
};

export type OverridenStruct = {
	overriden_field: string,
};

export type Pair<Z, A> = {
	first: Z,
	second: A,
};

export type PlaceholderInnerField = {
	a: string,
};

export type Primitives = {
	"1": number,
	"2": number,
	"3": number,
	"4": number,
	"5": number,
	"6": number,
	"7": number,
	"8": number,
	"9": number,
	a: number,
	b: number,
	c: number,
	d: number,
	e: number,
	f: boolean,
	"10": string,
	"11": {
		start: number,
		end: number,
	},
	"12": {
		start: number,
		end: number,
	},
	"13": null,
	"14": [string, number],
	"15": [string, number, boolean],
	"16": [[string, number], [boolean, string, boolean], null],
	"17": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
	"18": [number[], boolean[]],
	"19": string,
	"1a": string,
	"1b": string,
	"1c": string,
	"1d": string,
	"1e": string,
	"1f": string,
	"20": string,
	"21": string,
	"22": number,
	"23": {
		duration_since_epoch: number,
		duration_since_unix_epoch: number,
	},
	"24": {
		secs: number,
		nanos: number,
	},
	"25": string,
	"26": boolean,
	"27": number,
	"28": number[],
	"29": number[],
	"2a": [number, number, number],
	"2b": [number, number, number],
	"2c": MyEnum[],
	"2d": MyEnum[],
	"2e": [MyEnum, MyEnum, MyEnum, MyEnum, MyEnum, MyEnum],
	"2f": [MyEnum, MyEnum],
	"30": [number],
	"31": [],
	"32": number | null,
	"33": null | null,
	"34": number[] | null,
	"35": (number | null)[],
	"36": number[] | null,
	"37": [string[], string[], string[]],
	"38": string | null,
	"39": string | null,
	"3a": null,
	"3b": null,
	"3c": never,
	"3d": Unit1,
	"3e": Unit2,
	"3f": Unit3,
	"40": Unit4,
	"41": Unit5,
	"42": Unit6,
	"43": Unit7,
	"44": SimpleStruct,
	"45": TupleStruct1,
	"46": TupleStruct3,
	"47": TestEnum,
	"48": RefStruct,
	"49": InlinerStruct,
	"4a": GenericStruct<number>,
	"4b": GenericStruct<string>,
	"4c": FlattenEnumStruct,
	"4d": OverridenStruct,
	"4e": HasGenericAlias,
	"4f": EnumMacroAttributes,
	"50": InlineEnumField,
	"51": InlineOptionalType,
	"52": Rename,
	"53": TransparentType,
	"54": TransparentType2,
	"55": TransparentTypeWithOverride,
	"56": [(number | null), (number | null), (number | null)],
	"57": Partial<{ [key in BasicEnum]: null }>,
	"58": number | null,
	"59": PlaceholderInnerField[],
	"5a": Partial<{ [key in BasicEnum]: number }>,
	"5b": EnumReferenceRecordKey,
	"5c": FlattenOnNestedEnum,
	"5d": MyEmptyInput,
	"5e": string,
	"5f": [string],
	"60": ExtraBracketsInTupleVariant,
	"61": ExtraBracketsInUnnamedStruct,
	"62": MyEnum[],
	"63": InlineTuple,
	"64": InlineTuple2,
	"65": string,
	"66": string,
	"67": SkippedFieldWithinVariant,
	"68": KebabCase,
	"69": string[],
	"6a": Issue281,
	"6b": RenameWithWeirdCharsField,
	"6c": RenameWithWeirdCharsVariant,
	"6d": Issue374,
	"6e": Type,
	"6f": ActualType,
	"70": SpectaTypeOverride,
	"71": InvalidToValidType,
	"72": TupleStruct,
	"73": TupleStructWithRep,
	"74": GenericTupleStruct<string>,
	"75": BracedStruct,
	"76": StructRenameAllUppercase,
	"77": RenameSerdeSpecialChar,
	"78": EnumRenameAllUppercase,
	"79": Recursive,
	"7a": RecursiveMapValue,
	"7b": RecursiveTransparent,
	"7c": RecursiveInEnum,
	"7d": NonOptional,
	"7e": OptionalOnNamedField,
	"7f": OptionalOnTransparentNamedField,
	"80": OptionalInEnum,
	"81": Optional,
	"82": UntaggedVariants,
	"83": UntaggedVariantsWithoutValue,
	"84": { [key in string]: null },
	"85": Regular,
	"86": { [key in never]: null },
	"87": Partial<{ [key in UnitVariants]: null }>,
	"88": Partial<{ [key in UntaggedVariantsKey]: null }>,
	"89": Partial<{ [key in Variants]: null }>,
	"8a": MacroStruct,
	"8b": MacroStruct2,
	"8c": MacroEnum,
	"8d": DeprecatedType,
	"8e": DeprecatedTypeWithMsg,
	"8f": DeprecatedTypeWithMsg2,
	"90": DeprecatedFields,
	"91": DeprecatedTupleVariant,
	"92": DeprecatedEnumVariants,
	"93": CommentedStruct,
	"94": CommentedEnum,
	"95": SingleLineComment,
	"96": Demo<number, boolean>,
	"97": Demo<number, boolean>,
	"98": Demo<number, boolean>,
	"99": Demo<number, boolean>,
	"9a": Demo<number, boolean>,
	"9b": { [key in string]: number },
	"9c": { [key in number]: string },
	"9d": { [key in string]: AGenericStruct<number> },
	"9e": AGenericStruct<number>,
	"9f": A,
	a0: DoubleFlattened,
	a1: FlattenedInner,
	a2: BoxFlattened,
	a3: BoxInline,
	a4: First,
	a5: Second,
	a6: Third,
	a7: Fourth,
	a8: TagOnStructWithInline,
	a9: Sixth,
	aa: Seventh,
	ab: Eight,
	ac: Tenth,
	ad: MyEnumTagged,
	ae: MyEnumExternal,
	af: MyEnumAdjacent,
	b0: MyEnumUntagged,
	b1: EmptyStruct,
	b2: EmptyStructWithTag,
	b3: AdjacentlyTagged,
	b4: LoadProjectEvent,
	b5: ExternallyTagged,
	b6: InternallyTaggedB,
	b7: InternallyTaggedC,
	b8: InternallyTaggedD,
	b9: InternallyTaggedE,
	ba: InternallyTaggedF,
	bb: InternallyTaggedG,
	bc: InternallyTaggedH,
	bd: InternallyTaggedI,
	be: InternallyTaggedL,
	bf: InternallyTaggedM,
	c0: StructWithAlias,
	c1: StructWithMultipleAliases,
	c2: StructWithAliasAndRename,
	c3: EnumWithVariantAlias,
	c4: EnumWithMultipleVariantAliases,
	c5: EnumWithVariantAliasAndRename,
	c6: InternallyTaggedWithAlias,
	c7: AdjacentlyTaggedWithAlias,
	c8: UntaggedWithAlias,
	c9: EmptyEnum,
	ca: EmptyEnumTagged,
	cb: EmptyEnumTaggedWContent,
	cc: EmptyEnumUntagged,
	cd: TaggedEnumOfUnitStruct,
	ce: TaggedEnumOfEmptyBracedStruct,
	cf: TaggedEnumOfEmptyTupleStruct,
	d0: TaggedEnumOfEmptyTupleBracedStructs,
	d1: TaggedStructOfStructWithTuple,
	d2: SkipOnlyField,
	d3: SkipField,
	d4: SkipOnlyVariantExternallyTagged,
	d5: SkipOnlyVariantInternallyTagged,
	d6: SkipOnlyVariantAdjacentlyTagged,
	d7: SkipOnlyVariantUntagged,
	d8: SkipVariant,
	d9: SkipUnnamedFieldInVariant,
	da: SkipNamedFieldInVariant,
	db: TransparentWithSkip,
	dc: TransparentWithSkip2,
	dd: TransparentWithSkip3,
	de: SkipVariant2,
	df: SkipVariant3,
	e0: SkipStructFields,
	e1: SpectaSkipNonTypeField,
	e2: FlattenA,
	e3: FlattenB,
	e4: FlattenC,
	e5: FlattenD,
	e6: FlattenE,
	e7: FlattenF,
	e8: FlattenG,
	e9: TupleNested,
	ea: Generic1<null>,
	eb: GenericAutoBound<null>,
	ec: GenericAutoBound2<null>,
	ed: Container1,
	ee: Generic2<null, string, number>,
	ef: GenericNewType1<null>,
	f0: GenericTuple<null>,
	f1: GenericStruct2<null>,
	f2: string,
	f3: [string, string[], [string, string], { [key in string]: string }, string | null, "Unit" | { Unnamed: string } | { Named: { value: string } }],
	f4: InlineFlattenGenericsG<null>,
	f5: InlineFlattenGenerics,
	f6: GenericParameterOrderPreserved,
};

export type Recursive = {
	demo: Recursive,
};

export type RecursiveInEnum = { A: (RecursiveInEnum) };

export type RecursiveInline = (RecursiveInline);

export type RecursiveMapValue = {
	demo: { [key in string]: RecursiveMapValue },
};

export type RecursiveTransparent = RecursiveInline;

export type RefStruct = TestEnum;

export type Regular = { [key in string]: null };

export type Rename = "OneWord" | "Two words";

export type RenameSerdeSpecialChar = {
	"a/b": number,
};

export type RenameWithWeirdCharsField = {
	"@odata.context": string,
};

export type RenameWithWeirdCharsVariant = { "@odata.context": string };

export type Second = {
	a: number,
};

export type Seventh = {
	a: First,
	b: Second,
};

export type SimpleStruct = {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
};

/**
 *  Some single-line comment
 */
export type SingleLineComment = 
/**
 *  Some single-line comment
 */
{ A: number } | 
/**
 *  Some single-line comment
 */
{ B: { 
/**
 *  Some single-line comment
 */
a: number } };

export type Sixth = {
	a: First,
	b: First,
};

export type SkipField = {
	b: number,
};

export type SkipNamedFieldInVariant = { A: Record<string, never> } | { B: { b: number } };

export type SkipOnlyField = Record<string, never>;

export type SkipOnlyVariantAdjacentlyTagged = never;

export type SkipOnlyVariantExternallyTagged = never;

export type SkipOnlyVariantInternallyTagged = never;

export type SkipOnlyVariantUntagged = never;

export type SkipStructFields = {
	a: number,
};

export type SkipUnnamedFieldInVariant = { A: [] } | { B: number };

export type SkipVariant = { A: string };

export type SkipVariant2 = { tag: "A"; data: string };

export type SkipVariant3 = { A: { a: string } };

export type SkippedFieldWithinVariant = { type: "A" } | { type: "B"; data: string };

export type SpectaSkipNonTypeField = {
	a: number,
};

export type SpectaTypeOverride = {
	string_ident: string,
	u32_ident: number,
	path: string,
};

export type StructRenameAllUppercase = {
	A: number,
	B: number,
};

export type StructWithAlias = {
	field: string,
};

export type StructWithAliasAndRename = {
	renamed_field: string,
};

export type StructWithMultipleAliases = {
	field: string,
};

export type TagOnStructWithInline = {
	type: "TagOnStructWithInline",
	a: First,
	b: {
		a: string,
	},
};

export type TaggedEnumOfEmptyBracedStruct = { a: "A" } | { a: "B" };

export type TaggedEnumOfEmptyTupleBracedStructs = { a: "B" };

export type TaggedEnumOfEmptyTupleStruct = { a: "A" } | { a: "B" };

export type TaggedEnumOfUnitStruct = { a: "A" } | { a: "B" };

export type TaggedStructOfStructWithTuple = { a: "A" } | { a: "B" };

export type Tenth = string | null | {
	a: string,
} | First;

export type TestCollectionRegister = never;

export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

export type Third = (First) & {
	b: { [key in string]: string },
	c: First,
};

export type ToBeFlattened = {
	a: string,
};

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeInner = {
	inner: string,
};

export type TransparentTypeWithOverride = string;

export type TransparentWithSkip = null;

export type TransparentWithSkip2 = string;

export type TransparentWithSkip3 = string;

export type TupleNested = [number[], [number[], number[]], [number[], number[], number[]]];

export type TupleStruct = string;

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type TupleStructWithRep = string;

export type TupleStructWithTuple = null;

export type Type = never;

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = { A: [] };

export type Unit7 = { A: Record<string, never> };

export type UnitStruct = null;

export type UnitVariants = "A" | "B" | "C";

export type UntaggedVariants = string | number | { id: string } | [string, boolean];

export type UntaggedVariantsKey = string | number;

export type UntaggedVariantsWithoutValue = string | [number, string] | number;

export type UntaggedWithAlias = { field: string } | { other: number };

export type Variants = { A: string } | { B: number } | { C: number };
